--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -6082,6 +6082,10 @@ CONFIG_WCD_DSP_GLINK=y
 CONFIG_UNICODE=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 
+CONFIG_ARCH_HAS_RELR=y
+CONFIG_RELR=y
+CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+
 CONFIG_KLAPSE=y
 
 CONFIG_BPF_JIT=y
